syntax = "proto3";

package rfmk.resonite;

import "primitives.proto";

message Member {
  oneof member_kind {
    Reference reference = 1;
    SyncList sync_list = 2;
    SyncObject sync_object = 3;
    FieldString string = 4;
    FieldByte byte = 5;
    FieldUShort ushort = 6;
    FieldUInt uint = 7;
    FieldULong ulong = 8;
    FieldSByte sbyte = 9;
    FieldShort short = 10;
    FieldInt int = 11;
    FieldLong long = 12;
    FieldFloat float = 13;
    FieldNullFloat nullFloat = 14;
    FieldDouble double = 15;
    FieldBool bool = 16;
    FieldNullBool nullBool = 17;
    FieldFloat3 float3 = 18;
    FieldFloatQ floatQ = 19;
    FieldColor color = 20;
    FieldColorX colorX = 21;
    FieldColor32 color32 = 22;

    // TODO: Implement more fields.
  }
}

message Reference {
  string id = 1;
  optional string target_id = 2;
  string target_type = 3;
}

message SyncList {
  string id = 1;
  repeated Member elements = 2;
}

message SyncObject {
  string id = 1;
  map<string, Member> members = 2;
}

message FieldString {
  string id = 1;
  optional string value = 2;
}

message FieldByte {
  string id = 1;
  uint32 value = 2;
}

message FieldUShort {
  string id = 1;
  uint32 value = 2;
}

message FieldUInt {
  string id = 1;
  uint32 value = 2;
}

message FieldULong {
  string id = 1;
  uint64 value = 2;
}

message FieldSByte {
  string id = 1;
  int32 value = 2;
}

message FieldShort {
  string id = 1;
  int32 value = 2;
}

message FieldInt {
  string id = 1;
  int32 value = 2;
}

message FieldLong {
  string id = 1;
  int64 value = 2;
}

message FieldFloat {
  string id = 1;
  float value = 2;
}

message FieldNullFloat {
  string id = 1;
  optional float value = 2;
}

message FieldDouble {
  string id = 1;
  double value = 2;
}

message FieldBool {
  string id = 1;
  bool value = 2;
}

message FieldNullBool {
  string id = 1;
  optional bool value = 2;
}

message FieldFloat3 {
  string id = 1;
  Float3 value = 2;
}

message FieldColor {
  string id = 1;
  Color value = 2;
}

message FieldColorX {
  string id = 1;
  ColorX value = 2;
}

message FieldColor32 {
  string id = 1;
  Color32 value = 2;
}

message FieldFloatQ {
  string id = 1;
  FloatQ value = 2;
}
