syntax = "proto3";

package rfmk.resonite;

message Int2 {
  int32 x = 1;
  int32 y = 2;
}

message Int3 {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}

message Int4 {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
  int32 w = 4;
}

message Float2 {
  float x = 1;
  float y = 2;
}

message Float3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Float4 {
  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

message FloatQ {
  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

message Color {
  float r = 1;
  float g = 2;
  float b = 3;
  float a = 4;
}

message ColorX {
  float r = 1;
  float g = 2;
  float b = 3;
  float a = 4;
  string profile = 5;
}

message Color32 {
  uint32 r = 1;
  uint32 g = 2;
  uint32 b = 3;
  uint32 a = 4;
}
